@@ -6,6 +6,7 @@ Features
 
 * Provide the full ``GLOBAL_CONTEXT`` to the post list shortcode plugin
   (Issue #3481)
+* Add ``BasePlugin.register_auto_watched_folder()``
 
 New in v8.1.2
 =============
